--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="test/" kind="src" path="src"/>
+	<classpathentry kind="src" path="src/test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/Users/user/Downloads/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/alam/Documents/AuthX/AuthX-ForecastProject/ExternalJars/java-json.jar"/>
+	<classpathentry kind="lib" path="/Users/alam/Documents/AuthX/AuthX-ForecastProject/ExternalJars/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/alam/Documents/AuthX/AuthX-ForecastProject/ExternalJars/selenium-htmlunit-driver-2.9.0.jar"/>
+	<classpathentry kind="lib" path="/Users/alam/Documents/AuthX/AuthX-ForecastProject/ExternalJars/selenium-java-2.53.0.jar"/>
+	<classpathentry kind="lib" path="/Users/alam/Documents/AuthX/AuthX-ForecastProject/ExternalJars/selenium-server-standalone-2.53.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
